--- a/06-documenting_R.Rmd
+++ b/06-documenting_R.Rmd
@@ -1,6 +1,6 @@
 # Documenting R
 
-The R language has a substantial body of documentation, much of which is contributed by various authors. The documents for R are written in 'R documentation' (.Rd) file format. It is a simple markup language with close resemblance to LaTeX. The .Rd file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.
+The R language has a substantial body of documentation, much of which is contributed by various authors. The help files for R functions are written in 'R documentation' (.Rd) file format. It is a simple markup language with close resemblance to LaTeX. The .Rd file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.
 
 This chapter describes the styleguide for R's documentation, how to document for R, report and review bugs (and suggest corrections for them) in the existing documentation. If you are interested in contributing to R's documentation, your contributions are more than welcome. 
 
@@ -8,10 +8,9 @@ This chapter describes the styleguide for R's documentation, how to document for
 
 R’s documentation has long been considered to be good for a free programming language. The core developers have been committed to provide goods documentation on the language and its packages. The continuing involvement of the user community in providing assistance for creating and maintaining documentation has also supported a lot.
 
-The involvement of the community takes many forms, from authoring to bug reports to just plain complaining when the documentation could be more complete or easier to use.
+The involvement of the community takes many forms, from authoring to bug reports to raising an issue when the documentation could be more complete or easier to use.
 
 This chapter is aimed at authors and potential authors of documentation for R. More specifically, it is for people contributing to the standard documentation and developing additional documents using the same tools as the standard documents. Any time you feel that you can clarify existing documentation or provide documentation that is missing, your contribution will be welcome and highly appreciated. If you find it difficult to deal with the markup language, you can ask for help for that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out.
-
 
 ## Guidelines for writing the system help files (in .Rd format)
 
@@ -26,7 +25,6 @@ There are three main parts of an .Rd file:
 3. **Footer**: This part is optional. Usually the keyword information is included here.
 
 All the above information is included in a .Rd file within a series of sections with standard names (user-defined sections are also allowed). These sections are discussed below:
-
 
 1. `\title` section:
     * Capitalize each word.
@@ -45,6 +43,7 @@ All the above information is included in a .Rd file within a series of sections 
     * Make sure the examples are directly executable.
     * The examples should be system-independent.
     * The examples should not require special facilities (for instance, Internet access or write permission to specific directories).
+    * Examples should also not take longer than necessary to run, as they are run when checking a build of R.
     
 3. `\synopsis` section: The `\usage` section can have the function definition, or the actual definition can be included in the `\synopsis` section.
 
@@ -52,7 +51,7 @@ All the above information is included in a .Rd file within a series of sections 
     * Author(s) names should be written in the form `Author, A. B.`.
     * Author(s) names should be separated by a comma or `and` (but not both).
     * Separate paragraphs (separated by a blank line) should be used for each reference.
-    * Give a date immediatey after the author(s) names.
+    * Give a date immediately after the author(s) names.
     * Do not put a period after the date.
     * Titles of books and journals (not articles) should be enclosed in `\emph{...}`.
     * Volume numbers for journals are to be enclosed in `\bold{...}` and followed by a comma.
