--- a/02-getting_started.Rmd
+++ b/02-getting_started.Rmd
@@ -27,7 +27,7 @@ The `r-devel` at [R/trunk](https://svn.r-project.org/R/trunk "svn devel source c
 Bug fixes and new features are introduced in `r-devel` first. 
 If the change meets the [development guidelines](https://developer.r-project.org/devel-guidelines.txt) R Core will also make the change in `r-patched`.
 
-## Prerequisites  {.tabset}
+## Prerequisites
 
 To install from the source code you will need the source code and the dependencies of R.
 
@@ -84,12 +84,20 @@ In Ubuntu you can use :
 
 ### Windows
 
-Install MSYS and rtools42
+1.  [RTools](https://cran.r-project.org/bin/windows/Rtools/rtools42/rtools.html) is the toolchain bundle that you can use to build R base and R packages containing compiled code, on Windows. 
+  They can be downloaded from [their own page](https://cran.r-project.org/bin/windows/Rtools/rtools42/files/).
+
+2.  You also need a distribution of LaTeX installed for building R and checking packages.
+    The MiKTeX distribution of LaTeX that is used on CRAN can be downloaded from <https://miktex.org>.
+    
+The latest version of `RTools` can be downloaded from <https://cran.r-project.org/bin/windows/Rtools/> and run in the Windows-style installer.
 
 ### macOS
 
 
-## Building R in Linux
+## Building R 
+
+### Linux
 
 Here are the basic steps intended as a checklist.
 For complete instructions please see the section in [R-admin](https://cran.r-project.org/doc/manuals/r-devel/R-admin.html#Installing-R-under-Unix_002dalikes).
@@ -122,7 +130,9 @@ For complete instructions please see the section in [R-admin](https://cran.r-pro
         make check-devel
         make check-recommended
 
+
 [^02-getting_started-2]: Recommended packages are not in the subversion repository.
+
 
 If we don't want to build R in a different directory than the source code we can simply use:
 
@@ -144,66 +154,93 @@ To use the r-devel version in RStudio to you can do the following:
     rstudio
 
 
-## Windows
+### Windows
 
-### Installing R {#installR}
+#### Binaries
+
+The latest documentation about installing R and packages from source at the current time can be find [here](https://cran.r-project.org/bin/windows/base/howto-R-4.2.html).
 
 1.  The binary builds of R for Windows can be downloaded and installed from [here](https://cran.r-project.org/bin/windows/base/).
-    Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel.
+    Along with the link to the latest stable release, this page also contains links to the binary builds of `r-patched` and `r-devel`.
 
 2.  Click on the download links to download an executable installer.
 
 3.  Select the language while installing, read the GNU general public license information, and select the destination location to start the installation.
-    You will be prompted to select components at this stage: `User installation`, `32-bit User installation`, `64-bit User installation`, or `Custom installation`.
+    You will be prompted to select components at this stage: `User installation`, `64-bit User installation`, or `Custom installation`.
     The default option may be chosen for the questions from this step onwards to complete the installation.
+    
+You can also use the [binaries for `r-devel` made available](https://cran.r-project.org/bin/windows/base/rdevel.html) which are not so up to date. 
 
-### Building R and R packages
+#### From source
 
-#### What tools do you need to build R from source on Windows?
+You can download the R sources on Windows <https://svn.r-project.org/R/>. 
+But if you want to keep up with changes it is recommended to checkout the sources from svn, it is probably best to install an SVN client.
+Either TortoiseSVN (<https://tortoisesvn.net/>, command line tool, and Windows Explorer integration) or SlikSVN (<https://sliksvn.com/download/>, just the command line tool) is recommended.
 
-1.  [RTools](https://github.com/r-windows/docs/blob/master/faq.md#what-is-rtools) is the toolchain bundle that you can use to build R base and R packages containing compiled code, on Windows.
+1.  Open the Rtools42 terminal, and update and get the tools:
 
-2.  You also need a distribution of LaTeX installed for building R and checking packages.
-    The MiKTeX distribution of LaTeX that is used on CRAN can be downloaded from <https://miktex.org>.
+      pacman -Syuu
+      pacman -Sy wget subversion
+      
+2. Download the latest tcl/tk
 
-#### How to setup `RTools`?
+      wget -np -nd -r -l1 -A 'tcltk-*.zip' https://cran.r-project.org/bin/windows/Rtools/rtools42/files/
+      
+3. Set environment variables for POSIX, MiKTeX, tar (and one tar option):
 
-1.  The latest version of `RTools` can be downloaded from <https://cran.r-project.org/bin/windows/Rtools/> and run in the Windows-style installer.
-    You will need to know if you have a 32-bit or 64-bit Windows machine (right-click `This PC` in Windows Explorer and check the properties if you are unsure).
+        export PATH=/x86_64-w64-mingw32.static.posix/bin:$PATH
+        export PATH=/c/Program\ Files/MiKTeX/miktex/bin/x64:$PATH
+        export TAR="/usr/bin/tar"
+        export TAR_OPTIONS="--force-local"
 
-2.  Don't forget to add `RTools` to the path as documented on the download page.
+4. Check that all the programs can be found:
 
-#### How to build R?
+        which make gcc pdflatex tar
+        
+    If there is any error you'll need to find where the program is installed and add the corresponding path.
+1.  Download the latest recommended packages[^02-getting_started-2]:
 
-To build R for Windows using `RTools` follow the instructions in this [README](https://github.com/r-windows/r-base#readme) file.
-There are two options available to build R.
-One is the quick development build and the other option is the full installer build.
+        $TOP_SRCDIR/tools/rsync-recommended
 
-For development and testing, you need only the quick development build.
-The quick build avoids building the manuals, which are generally not needed for development and testing.
+3.  Create the build directory in the `BUILDDIR`:
 
-However, even for the quick build there are some [default requirements](https://github.com/r-windows/r-base/blob/master/quick-build.sh).
-For instance, MikTeX is to be installed in `C:/Program Files` and you have 64-bit R.
-If necessary, these defaults can be customised.
-The installation path of MikTex can be customised [here](https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13) whereas the Windows bit can be customised [here](https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6).
+        export BUILDDIR="$HOME/bin/R"
+        mkdir -p $BUILDDIR
+        cd $BUILDDIR
+        
+4.  Configure the R installation (with `--enable-R-shlib` so that RStudio IDE can use it):
+        
+        $TOP_SRCDIR/configure --enable-R-shlib
+        
+4.  Build R :
 
-If you are a maintainer of the Windows CRAN releases then, the full installer build is available for building the complete installer as it appears on CRAN.
-It will build both the 32-bit and 64-bit R, the pdf manuals, and the installer program.
-You will use this to create the binary builds and not when building R from the source yourself.
+        make 
 
-### How to download the R sources directly or from the svn repository?
 
--   To download the R sources on Windows, you can use `tar` from the RStudio terminal.
+5.  Check that R works as expected:
 
--   If you want to checkout the sources from svn, it is probably best to install an SVN client.
-    Either TortoiseSVN (<https://tortoisesvn.net/>, command line tool, and Windows Explorer integration) or SlikSVN (<https://sliksvn.com/download/>, just the command line tool) is recommended.
-    They have simple Windows installers and you can use svn straight-away from Windows cmd or RStudio terminal.
+        make check
+
+    There are other checks you can run:
+
+        make check-devel
+        make check-recommended
+
+
+### macOS
+
 
 ## See also
 
 1.  [CRAN official website](https://cran.r-project.org)
 
 2.  [R installation and administration manual](https://cran.r-project.org/doc/manuals/r-patched/R-admin.html)
+
+3.  [R for macOS](https://mac.r-project.org/)
+
+3.  [Tools for R in macOS](https://mac.r-project.org/tools/)
+
+3.  [R for requirements in macOS](https://mac.r-project.org/src/)
 
 3.  [R for Windows FAQ](https://cran.r-project.org/bin/windows/base/rw-FAQ.html)
 
